Bug 33701 - Extension Manager: "Check for Updates" – LibO crashes
Summary: Extension Manager: "Check for Updates" – LibO crashes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard:
Keywords:
: 33729 34326 34439 34616 34667 35014 (view as bug list)
Depends on:
Blocks: 34404
  Show dependency treegraph
 
Reported: 2011-01-29 13:48 UTC by manj_k
Modified: 2011-12-25 03:49 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
Extension Manager – "Check for updates" – crash (28.67 KB, image/png)
2011-01-29 13:50 UTC, manj_k
Details
[attachment 1 – installed bundled extensions] (43.99 KB, image/png)
2011-02-18 12:42 UTC, manj_k
Details
[attachment 2 - History Master 1.1.0 has been installed successfully] (27.87 KB, image/png)
2011-02-18 12:44 UTC, manj_k
Details
[attachment 3 - "Check for Updates..." > crash] (32.42 KB, image/png)
2011-02-18 12:45 UTC, manj_k
Details

Note You need to log in before you can comment on or make changes to this bug.
Description manj_k 2011-01-29 13:48:25 UTC
[LibO 3.3.0 release on WinXP]

- Start LibO, open Extension Manager
- Install any extension (for user only), e.g. "History Master 1.0.5"
- Close and restart LibO
- Tools > Extension Manager > "Check for Updates..."
- LibO crashes

Expected: Update "History Master 1.1.0"
Comment 1 manj_k 2011-01-29 13:50:41 UTC
Created attachment 42702 [details]
Extension Manager – "Check for updates" – crash
Comment 2 Larry Gusaas 2011-01-30 09:33:33 UTC
Checking for extension updates crashes LibO on a Mac as well.

Mac OS 10.6.6 

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 3 gatocl.maipu 2011-01-30 10:50:19 UTC
Crash like the bug description, with only the es and en spell checker installed and no other extensions

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 4 Magnus Hansson 2011-02-01 15:08:08 UTC
Can confirm this bug. Windows XP SP3, LO 3.3 any extension
Comment 5 Ioannis 2011-02-02 07:35:21 UTC
Sorry, I don't see this problem under the following setup:

===
Mac OS X 10.5.8

LibreOffice 3.3.0
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
===

Openoffice 3.2.1 is also installed on the same machine, though rarely used now.
Comment 6 Andras Timar 2011-02-18 04:55:26 UTC
*** Bug 34326 has been marked as a duplicate of this bug. ***
Comment 7 Andras Timar 2011-02-18 04:55:54 UTC
*** Bug 33729 has been marked as a duplicate of this bug. ***
Comment 8 Andras Timar 2011-02-18 04:56:34 UTC
*** Bug 34439 has been marked as a duplicate of this bug. ***
Comment 9 Rainer Bielefeld Retired 2011-02-18 08:43:40 UTC
NOT Reproducible with "LibreOffice 3.3.1 RC1 – WIN7  Home Premium  (64bit) German UI [OOO330m19 (build 7 / tag 3.3.1.1)]"

My steps to reproduce:
1. Started a particular CALC document from Desktop
2. closed document, so that only start center remains
3. Menu 'Tools > Extension Manager - Link "Load Extensions from Internet ...'
   Automatic forward to 
   <http://libreplanet.org/wiki/Group:OpenOfficeExtensions/List>
4. Searched page for "History" to find  "History Master 1.1.0"
   Not found
5. clicked link "Convert Text To Number (and date)" to get to 
   OOo Extension repository
6. Use Search for "History"
   found History Manager 2.1.0
7. <Get it> 
   LibO Installation dialog appeared after few moments
8. I opened "HistoryManager2.1.oxt" directly with LibO
9. <OK> in "do you want to install dialog"
10. I scrolled and accepted
    Unexpected: I have not been asked whether I want to install for all 
                or only for me, but may be I installed This LibO version 
                "only for me"
    As expected: Extension has been installed successfully, no crash
11. Closed Dialog
12. Reopened Extension Manager
13. Selected "HistoryManager 2.1"
13. Clicked "Check for updates"
    As expected, Check for updates, no crash
14. Did again step 13 for all my extensions (marked each and checked then)
    No crash
15. Closed LibO, reopened CALC document from Desktop
16. Started Extension manager, checked for updates without any Extension
    selected
    No crash
17. Opened new WRITER document
18. Redid step 16.
    No crash

@manj_k:
From where did you get your obsolete Extension version? Why did you install that one instead of the current one?

@all
My Question:
What other Extensions have you downloaded?
Can it be that any particular installed Extension causes the crash?
What modifications in my test might lead to a crash?
Is this still reproducible with 3.1.1RC?
Comment 10 Leopoldo Saggin 2011-02-18 09:10:02 UTC
Here I reported:
https://bugs.freedesktop.org/show_bug.cgi?id=34326
that I had no problems with Windows7 Pro 64 bit, while I had a crash in 2 computers using WinXP Pro 32bit.
The id reported in the link above was removed as a duplicate.
Anyway, unfortunately when one reportd a bug he/she cannot check only a particular version of Windows because it suggests:
Platform "Windows (All)"
In my experience this bug affects only WinXP and not Win7 but I cannot say if it hits both 32 and 64bit or only 32 because I have non WinXP 64 bit.

L. Saggin
Comment 11 manj_k 2011-02-18 12:40:24 UTC
@Rainer Bielefeld [Comment 9]

[LibreOffice 3.3.1 RC2 – WinXP-SP3 (32bit)
UI: en-US [OOO330m19 (build 8 / tag 3.3.1.2)]
[The same with LibreOffice 3.3.1 RC1 ...]

Clean (custom) installation
New default user profile (not customized)
Only eight (mostly outdated) bundled extensions are installed 
[attachment 1 – installed bundled extensions]

1. Started LibO from desktop
2. From Start Center ->
3. Menu Tools > Extension Manager... > "Get more extensions online..."
   Automatic forward to 
   <http://libreplanet.org/wiki/Group:OpenOfficeExtensions/List>
4. "History Master 1.1.0" (unfortunately) not available   
5. Clicked link "Linguist" to go to OOo extensions repository
6. Used "Search" for "History Master" – found "History Master 1.1.0"
   <http://extensions.services.openoffice.org/en/project/HistoryMaster>
7. <Get it> 
8. Opened "History Master 1.1.0.oxt" directly with LibO
9. Clicked <OK> to proceed with the installation
10. Scrolled and accepted the license
    Installed (without inquiry) "Only for me"
    As expected: Extension has been installed successfully, no crash
    [attachment 2 - History Master 1.1.0 has been installed successfully]

11. Closed Extension Manager and LibO
12. Reopened LibO (Start Center) > Menu Tools > Extension Manager...
13. Selected "History Master 1.1.0"
14. Clicked "Check for Updates..." > Extension Update > "Checking.." >
    Unexpected: 
    "LibreOffice Document Recovery": 
    "Due to an unexpected error, LibreOffice crashed […]"
    [attachment 3 - "Check for Updates..." > crash]
    Expected: "No new updates are available."

[BTW: 
That works fine for me with OOo 3.3.0 final (OOO300m20).
But the same crash with OOo developer snapshots from DEV300m96 to DEV300m100;
reported as Issue 116293
<http://www.openoffice.org/issues/show_bug.cgi?id=116293>
now duplicate of Issue 115995
<http://www.openoffice.org/issues/show_bug.cgi?id=115995>]
Comment 12 manj_k 2011-02-18 12:42:30 UTC
Created attachment 43532 [details]
[attachment 1 – installed bundled extensions]

[attachment 1 – installed bundled extensions]
Comment 13 manj_k 2011-02-18 12:44:05 UTC
Created attachment 43534 [details]
[attachment 2 - History Master 1.1.0 has been installed successfully]

[attachment 2 - History Master 1.1.0 has been installed successfully]
Comment 14 manj_k 2011-02-18 12:45:42 UTC
Created attachment 43535 [details]
[attachment 3 - "Check for Updates..." > crash]

[attachment 3 - "Check for Updates..." > crash]
Comment 15 Rainer Bielefeld Retired 2011-02-19 00:39:09 UTC
It seems that at least most of the confirms are with 32bit machines?
Comment 16 David Hobbs 2011-02-23 07:19:54 UTC
*** Bug 34616 has been marked as a duplicate of this bug. ***
Comment 17 David Hobbs 2011-02-23 07:27:44 UTC
I get the crash with the standard installation on Win2000 SP4. It happened every time when done via LibreOffice (plain), but the first couple times I tried via Writer, I got a connection error message.

LibreOffice 3.3.1 
OOO330m19 (Build:8)
tag libreoffice-3.3.1.2
Comment 18 David Hobbs 2011-02-23 13:58:48 UTC
No crash on Win7 64-bit.

LibreOffice 3.3.1 
OOO330m19 (Build:8)
tag libreoffice-3.3.1.2
Comment 19 GAJ 2011-02-24 21:53:09 UTC
*** Bug 34667 has been marked as a duplicate of this bug. ***
Comment 20 Andras Timar 2011-02-25 02:10:28 UTC
(ab0.15ec): C++ EH exception - code e06d7363 (first chance)
(ab0.15ec): C++ EH exception - code e06d7363 (first chance)
(ab0.15ec): Access violation - code c0000005 (first chance)
First chance exceptions are reported before any exception handling.
This exception may be expected and handled.
eax=08da5310 ebx=00000001 ecx=08ccfe50 edx=03b21ce8 esi=000000ae edi=08ccffd0
eip=03337064 esp=11e5fbe4 ebp=11e5fc30 iopl=0         nv up ei pl nz na po nc
cs=001b  ss=0023  ds=0023  es=0023  fs=003b  gs=0000             efl=00010202
*** ERROR: Symbol file could not be found.  Defaulted to export symbols for C:\Program Files\LibreOffice 3\program\libxml2.dll - 
libxml2!xmlXPathFreeNodeSet+0x24:
03337064 83780412        cmp     dword ptr [eax+4],12h ds:0023:08da5314=????????

WARNING: Stack unwind information not available. Following frames may be wrong.
libxml2!xmlXPathFreeNodeSet+0x24
unoxmlmi!GetVersionInfo+0x1ae8a
unoxmlmi!GetVersionInfo+0x1aea6
cppuhelper3MSC!cppu::OWeakObject::release+0x29
updatefeed_uno!component_getFactory+0x139b
updatefeed_uno!component_getFactory+0x13ca
cppuhelper3MSC!cppu::OWeakObject::release+0x29
updatefeed_uno!component_getFactory+0x40d4
deploymentmiscmi!dp_misc::getExtensionWithHighestVersion+0x47a
deploymentmiscmi!dp_misc::getExtensionWithHighestVersion+0xcfb
deploymentmiscmi!dp_misc::getOnlineUpdateInfos+0x1eb
deploymentguimi_uno!component_getFactory+0x1a1f2
deploymentguimi_uno!component_getFactory+0x1a860
deploymentguimi_uno!GetVersionInfo+0x485
sal3!osl_getGlobalMutex+0x1c
MSVCR90!endthreadex+0x44
MSVCR90!endthreadex+0xd8
kernel32!GetModuleFileNameA+0x1ba
Comment 21 Jonathan S 2011-02-25 14:38:15 UTC
As manj_k says in comment 11, this appears to be:
http://openoffice.org/bugzilla/show_bug.cgi?id=115995

This mentions a "unoxml memory leak fix" (comment 13 there) and a fix has been applied which pre-dates the release of OpenOffice 3.3

Since I have both OpenOffice 3.3 and LibreOffice 3.3.1 installed (on a PC running XP SP3), I thought I'd try copying unoxmlmi.dll from 'OpenOffice.org 3\program' to 'LibreOffice 3\program'. The files are exactly the same size but the OpenOffice file is vsn 3.3.9549.500 and the LibreOffice is vsn 3.3.8.500 (thus older).

To my surprise, this cured the problem. I used to get a crash whenever attempting an update. Now I just get a proper update :-)

If a developer can apply that fix which is linked from the above Openoffice bug report (I'm not up to it!), we should be able to cure this irritating bug.
Comment 22 gatocl.maipu 2011-02-25 14:47:34 UTC
(In reply to comment #21)
> As manj_k says in comment 11, this appears to be:
> http://openoffice.org/bugzilla/show_bug.cgi?id=115995
> 
> This mentions a "unoxml memory leak fix" (comment 13 there) and a fix has been
> applied which pre-dates the release of OpenOffice 3.3
> 
> Since I have both OpenOffice 3.3 and LibreOffice 3.3.1 installed (on a PC
> running XP SP3), I thought I'd try copying unoxmlmi.dll from 'OpenOffice.org
> 3\program' to 'LibreOffice 3\program'. The files are exactly the same size but
> the OpenOffice file is vsn 3.3.9549.500 and the LibreOffice is vsn 3.3.8.500
> (thus older).
> 
> To my surprise, this cured the problem. I used to get a crash whenever
> attempting an update. Now I just get a proper update :-)
> 
> If a developer can apply that fix which is linked from the above Openoffice bug
> report (I'm not up to it!), we should be able to cure this irritating bug.

I confirm this, the interchage of thew file unoxmlmi.dll between OO3.3 and LO3.3.1 rpermit the update without problem
Comment 23 manj_k 2011-02-25 15:21:51 UTC
I applied the workaround from comment 21 (replacement of unoxmlmi.dll).
"Check for updates" works fine now:
- updated successfully, if an update is available
- "No new updates are available", if up-to-date.
Comment 24 Jonathan S 2011-02-28 11:45:05 UTC
For those wishing to apply the workround without installing OpenOffice, franx has uploaded the dll from OpenOffice here:
http://dl.dropbox.com/u/19264180/unoxmlmi.dll

(From OOo community forum - http://user.services.openoffice.org/en/forum/viewtopic.php?f=15&t=38477)
Comment 25 Michael Meeks 2011-03-01 08:35:19 UTC
The code change from comment 21 is already present in libreoffice-3-3-0 and of course 3.3.1 - which is strange, as filters commit: 3e46d50d71eb3861ce73120e06dc6b8a4b17a36a - so this issue has no known code fix.

I guess this was bug#30825 - but apparently not entirely fixed.
Comment 26 Caolán McNamara 2011-03-02 01:49:42 UTC
Doesn't crash for me, but I can see valgrind spew, so I'll take this
Comment 27 Caolán McNamara 2011-03-02 03:16:02 UTC
node list owns a XPath (via m_pXPathObj) and a XmlDoc (via m_xContextNode)

m_pXPathObj needs the xmldoc to exist in its dtor, but m_xContextNode happens to be listed after m_pXPathObj in the class definition, which means that the xmldoc was released before the xpath was, which would explain the ka-boom. 

Fix checked into master,
http://cgit.freedesktop.org/libreoffice/filters/commit/?id=09be9031ce3e3ffb6cc40f45ac5e1a4192adcb15

caolanm->dtardon: Can you review this fix and cherry pick to libreoffice-3-3 please
Comment 28 David Tardon 2011-03-02 22:52:43 UTC
looks reasonable -> pushed
Comment 29 Don't use this account, use tml@iki.fi 2011-03-03 01:37:49 UTC
bugzilla_acct_1959@yahoo.com: 

You say in Comment #21: "the OpenOffice file is vsn 3.3.9549.500 and the LibreOffice is vsn 3.3.8.500 (thus older)". It is pointless and wrong to compare the version number of a DLL or EXE in OOo to the version nmumber in the corresponding file in LO. You should consider OOo and LO as separate products (that just share a lot of code). It is just because LO is so far quite young that the release version numbers as advertised to the user (i.e. 3.3 and now 3.3.1), and the release schedule, happen to match that of OOo closely. You can compare version numbers only for the same file in two releases/builds of the same product. As for the future, we don't know yet if LO will follow the same version numbering and release schedule as OOo or not.
Comment 30 Don't use this account, use tml@iki.fi 2011-03-04 06:03:09 UTC
*** Bug 35014 has been marked as a duplicate of this bug. ***
Comment 31 Nicolas LECORNU 2011-03-04 10:10:54 UTC
I am sorry for the duplicate but is what this bug is corrected for the 3.3.1 because with even with the update, the bug is still present.
Comment 32 Caolán McNamara 2011-03-06 12:17:02 UTC
fixed after 3.3.1 release in 3-3 branch, i.e. currently open for 3.3.2
Comment 33 manj_k 2011-03-11 01:04:15 UTC
[LibreOffice 3.3.2 (RC1)
OOO330m19 (Build:201)
tag libreoffice-3.3.2.1
– on WinXP-SP3 32bit]

Extension Manager > "Check for updates" works fine now:
- Updated successfully, if an update was available
- Message "No new updates are available", if up-to-date.
Comment 34 Björn Michaelsen 2011-12-22 05:50:57 UTC Comment hidden (noise)